update readme and gradle