@@ -34,6 +34,18 @@ allprojects {
         }
     }
 
+    tasks.withType(JavaCompile) {
+        options.warnings = false
+        options.deprecation = false
+        options.compilerArgs += ["-Xlint"]
+        options.compilerArgs += ["-Xdoclint:none", "-Xlint:none", "-nowarn"]
+        options.compilerArgs += ["--enable-preview"]
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += ["--enable-preview", "-XX:+UseZGC"]
+    }
+
     repositories {
         mavenLocal()
         mavenCentral()
@@ -47,17 +59,16 @@ allprojects {
 ext.libraries = [
         lwjgl: [
                 "org.lwjgl:lwjgl",
-                "org.lwjgl:lwjgl-assimp",
-                "org.lwjgl:lwjgl-bgfx",
-                "org.lwjgl:lwjgl-cuda",
                 "org.lwjgl:lwjgl-glfw",
-                "org.lwjgl:lwjgl-nanovg",
-                "org.lwjgl:lwjgl-nuklear",
+                "org.lwjgl:lwjgl-jawt",
                 "org.lwjgl:lwjgl-openal",
                 "org.lwjgl:lwjgl-opengl",
-                "org.lwjgl:lwjgl-par",
-                "org.lwjgl:lwjgl-stb",
-                "org.lwjgl:lwjgl-vulkan"
+        ],
+        lwjglRuntime: [
+                "org.lwjgl:lwjgl::$lwjglNatives",
+                "org.lwjgl:lwjgl-glfw::$lwjglNatives",
+                "org.lwjgl:lwjgl-openal::$lwjglNatives",
+                "org.lwjgl:lwjgl-opengl::$lwjglNatives",
         ]
 ]
 
@@ -65,21 +76,10 @@ project(":core") {
     apply plugin: "java"
 
     dependencies {
-
         implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
         implementation libraries.lwjgl
+        runtimeOnly libraries.lwjglRuntime
 
-        runtimeOnly("org.lwjgl:lwjgl::$lwjglNatives")
-        runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-        if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
         implementation "org.joml:joml:${jomlVersion}"
 
         implementation group: 'com.github.kerner1000', name: 'javapng', version: '2.1.2'
@@ -96,29 +96,9 @@ project(":engine") {
         implementation project(":core")
 
         implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
-        implementation "org.lwjgl:lwjgl"
-        implementation "org.lwjgl:lwjgl-assimp"
-        implementation "org.lwjgl:lwjgl-bgfx"
-        implementation "org.lwjgl:lwjgl-cuda"
-        implementation "org.lwjgl:lwjgl-glfw"
-        implementation "org.lwjgl:lwjgl-nanovg"
-        implementation "org.lwjgl:lwjgl-nuklear"
-        implementation "org.lwjgl:lwjgl-openal"
-        implementation "org.lwjgl:lwjgl-opengl"
-        implementation "org.lwjgl:lwjgl-par"
-        implementation "org.lwjgl:lwjgl-stb"
-        implementation "org.lwjgl:lwjgl-vulkan"
-        runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-        if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
+        implementation libraries.lwjgl
+        runtimeOnly libraries.lwjglRuntime
+
         implementation "org.joml:joml:${jomlVersion}"
     }
 
@@ -131,31 +111,11 @@ project(":editor") {
         implementation project(":core")
 
         implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
-        implementation "org.lwjgl:lwjgl"
-        implementation "org.lwjgl:lwjgl-assimp"
-        implementation "org.lwjgl:lwjgl-bgfx"
-        implementation "org.lwjgl:lwjgl-cuda"
-        implementation "org.lwjgl:lwjgl-glfw"
-        implementation "org.lwjgl:lwjgl-nanovg"
-        implementation "org.lwjgl:lwjgl-nuklear"
-        implementation "org.lwjgl:lwjgl-openal"
-        implementation "org.lwjgl:lwjgl-opengl"
-        implementation "org.lwjgl:lwjgl-par"
-        implementation "org.lwjgl:lwjgl-stb"
-        implementation "org.lwjgl:lwjgl-vulkan"
-        runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
-        runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
-        if (lwjglNatives == "natives-macos") runtimeOnly "org.lwjgl:lwjgl-vulkan::$lwjglNatives"
+        implementation libraries.lwjgl
+        runtimeOnly libraries.lwjglRuntime
 
         implementation "org.joml:joml:${jomlVersion}"
+
         implementation 'com.formdev:flatlaf:0.39'
     }
 
